--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ GENERATE_SOURCEMAP=${GENERATE_SOURCEMAP_CM}
 REACT_APP_PRODUCTION=${REACT_APP_PRODUCTION_CM}
 ANNOUNCEMENT_URL=${ANNOUNCEMENT_URL_CM}
 ANNOUNCEMENT_API_KEY=${ANNOUNCEMENT_API_KEY_SCRT}
-REQUIRE_AUTH=${REQUIRE_AUTH_CM}
+REQUIRE_AUTH=false
 AZ_CALLBACK_PATH=${AZ_CALLBACK_PATH_CM}
 ORCH_API_ENDPOINT=${ORCH_API_ENDPOINT_CM}
 SAML_ENV_PROPS_PATH=${SAML_ENV_PROPS_PATH_CM}
@@ -22,3 +22,4 @@ ACR_API_KEY=${ACR_API_KEY_SCRT}
 ACR_API_ENDPOINT=${ACR_API_ENDPOINT_CM}
 AZURE_STORAGE_ACCOUNT_NAME=${AZURE_STORAGE_ACCOUNT_NAME_CM}
 AZURE_STORAGE_ACCOUNT_ACCESS_KEY=${AZURE_STORAGE_ACCOUNT_ACCESS_KEY_SCRT}
+NODE_ENV=development
